# scan-gui

./: .clang-format  .gitignore  .mailmap  CMakeLists.txt  README.md  flake.nix  main.cpp  mainwindow.cpp  mainwindow.h  scaninfo.cpp  scaninfo.h  test_case.qrc  userinformations.cpp  userinformations.h
SortTable/: sorttable.cpp  sorttable.h  tablebox.cpp  tablebox.h
data/: settings.cpp  settings.h
json/: jsonlinker.cpp  jsonlinker.h  jsonreader.cpp  jsonreader.h
preview/: examscene.cpp  examscene.h  examviewport.cpp  examviewport.h  externalpreviewdialog.cpp  externalpreviewdialog.h  pagemask.cpp  pagemask.h  preview.cpp  preview.h  singlepage.cpp  singlepage.h
preview/fields/: atomicboxitem.cpp  atomicboxitem.h  fielditem.cpp  fielditem.h  markercontroller.cpp  markercontroller.h  markerhandles.cpp  markerhandles.h  markeritem.cpp  markeritem.h  ocritem.cpp  ocritem.h
resources/: previewplaceholders.qrc  test_case.qrc
resources/test_case/Json/: 1-0-1-json.json  1-1-0-json.json  3-1-1-json.json
resources/test_case/basic-1-1-1/: atomic-boxes.json
resources/test_case/basic-2-1-0/: atomic-boxes.json
resources/test_case/basic-3-0-0/: atomic-boxes.json
sortTable/: boundary.cpp  boundary.h  controller.cpp  controller.h  fieldviewtable.cpp  fieldviewtable.h  groupviewtable.cpp  groupviewtable.h  progresscell.cpp  progresscell.h  sorttable.cpp  sorttable.h  tablebox.cpp  tablebox.h
